--- a/src/_includes/date.njk
+++ b/src/_includes/date.njk
@@ -1,5 +1,7 @@
 <span>
-	{%- if label === "Created" %}Created on {% endif -%}
-	{%- if label === "Last modified" %}Last modified on {% endif -%}
-	<time class="[ {% if label === "Created" %}dt-published{% else %}dt-updated{% endif %} ]" datetime="{{ date | dateToISO }}">{{ date | dateToLocaleDateFull }}</time>
+	{{ label + " on " }}
+	<time 
+		class="[ {% if label === "Created" %}dt-published{% else %}dt-updated{% endif %} ]"
+		datetime="{{ date | dateToISO }}"
+	>{{ date | dateToLocaleDateFull }}</time>
 </span>
