--- a/src/_includes/tags.njk
+++ b/src/_includes/tags.njk
@@ -1,5 +1,5 @@
 {%- for tag in tags -%}
 	{%- if tag !== exclude -%}
-		<a href="/tags/{{ tag | slugify }}/" class="[ badge ] [ p-category ] [ neutral pill ]">{{ tag }}</a>
+		<a href="/tags/{{ tag | slugify }}/" class="[ badge ] [ p-category ] [ neutral pill text-decoration-none ]">{{ tag }}</a>
 	{%- endif -%}
 {%- endfor -%}
