--- a/src/input/css/utilities/layout.css
+++ b/src/input/css/utilities/layout.css
@@ -66,3 +66,51 @@
 .gap-6 {
 	gap: var(--size-6);
 }
+
+.column-gap-1 {
+	column-gap: var(--size-1);
+}
+
+.column-gap-2 {
+	column-gap: var(--size-2);
+}
+
+.column-gap-3 {
+	column-gap: var(--size-3);
+}
+
+.column-gap-4 {
+	column-gap: var(--size-4);
+}
+
+.column-gap-5 {
+	column-gap: var(--size-5);
+}
+
+.column-gap-6 {
+	column-gap: var(--size-6);
+}
+
+.row-gap-1 {
+	row-gap: var(--size-1);
+}
+
+.row-gap-2 {
+	row-gap: var(--size-2);
+}
+
+.row-gap-3 {
+	row-gap: var(--size-3);
+}
+
+.row-gap-4 {
+	row-gap: var(--size-4);
+}
+
+.row-gap-5 {
+	row-gap: var(--size-5);
+}
+
+.row-gap-6 {
+	row-gap: var(--size-6);
+}
