- Simplify header navigation and move extended nav to footer - Update navigation styling and responsive design - Remove dropdown menus

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,22 +1,27 @@
 <header class="[ site-head ] [ wrapper ]" style="--wrapper-size: 100ch;">
-	<div class="[ inner ]">
-		<div>
-			<!-- link to home: http://microformats.org/wiki/rel-home -->
-			<a href="/" rel="home" class="[ u-url u-uid ] [ text-decoration-none ]"{% if page.url === "/" %} data-state="active" aria-current="page"{% endif %}>
-				{%- icon "local:elly", class="logo" -%}
-				<span class="[ p-name ] [ visually-hidden ]">
-					Elly<span aria-hidden="true"> Loel</span>
-				</span>
-			</a>
+	<nav class="[ nav ][ flex flex-wrap gap-3 align-center ]">
+		<!-- link to home: http://microformats.org/wiki/rel-home -->
+		<a href="/" rel="home" class="[ u-url u-uid ] [ text-decoration-none ]"{% if page.url === "/" %} aria-current="page"{% endif %}>
+			{%- labelledIcon "local:elly", class="logo" -%}
+			<span class="[ p-name ]" hidden>Elly Loel</span>
+		</a>
 
-			<button type="button" id="settings-dialog-open-button">
-				{%- icon "fas:gear" -%}
-				<span class="[ visually-hidden ]">Settings</span>
-			</button>
+		{#- Larger viewports -#}
+		{%- include "navigation.njk" -%}
 
-			{% include "settings.njk" %}
-		</div>
+		<a href="/search/" class="[ button ]"{% if page.url === "/search/" %} aria-current="page"{% endif %}>
+			{%- icon "fas:magnifying-glass" -%}
+			<span class="[ visually-hidden ]">Search</span>
+		</a>
 
-		{% include "navigation.njk" %}
-	</div>
+		<button type="button" id="settings-dialog-open-button">
+			{%- icon "fas:gear" -%}
+			<span class="[ visually-hidden ]">Settings</span>
+		</button>
+
+		{#- Smaller viewports -#}
+		{%- include "navigation.njk" -%}
+	</nav>
+
+	{%- include "settings.njk" -%}
 </header>
