--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,30 +1,13 @@
-<nav aria-label="Primary" class="[ nav ]">
-	{% set navPages = collections.all | eleventyNavigation %}
-	<ul role="list" class="list">
-		{%- for entry in navPages %}
-			{%- if entry.url === "/me/" or entry.url === "/writing/" -%}
-				<li>
-					<details-utils close-esc close-click-outside>
-						<details>
-							<summary>
-								{{ entry.title }}
-								{%- icon "fas:plus" -%}
-							</summary>
-							<ul role="list">
-								{%- for child in entry.children %}
-									<li>
-										<a{% if child.url === page.url %} data-state="active" aria-current="page"{% endif %} href="{{ child.url | url }}">{{ child.title }}</a>
-									</li>
-								{% endfor -%}
-							</ul>
-						</details>
-					</details-utils>
-				</li>
-			{%- else -%}
-				<li>
-					<a{% if entry.url === page.url %} data-state="active" aria-current="page"{% endif %} href="{{ entry.url | url }}">{{ entry.title }}</a>
-				</li>
-			{%- endif -%}
-		{%- endfor %}
-	</ul>
-</nav>
+{% set navPages = collections.all | eleventyNavigation %}
+<ul role="list" class="[ list ][ align-center ]">
+	{%- for entry in navPages %}
+		{%- if entry.url !== "/footer/" %}
+			<li>
+				<a{% if entry.url === page.url %} aria-current="page"{% endif %} href="{{ entry.url | url }}">{{ entry.title }}</a>
+			</li>
+		{%- endif %}
+	{%- endfor %}
+	<li>
+		<a href="#footer-nav">More…</a>
+	</li>
+</ul>
