--- a/src/input/css/blocks/nav.css
+++ b/src/input/css/blocks/nav.css
@@ -2,111 +2,53 @@
 	font-weight: var(--font-weight-body-bold);
 	line-height: 1;
 
-	& .list {
-		column-gap: var(--size-3);
-		display: flex;
-		flex-wrap: wrap;
-		row-gap: var(--size-2);
-	}
+	& a[href="/"] {
+		&:hover {
+			background-color: transparent;
+		}
 
-	& a {
-		border-radius: var(--radius-2);
-		display: block;
-		position: relative;
-
-		&:is([data-state="active"], [aria-current="page"]) {
-			background-color: var(--accent-text);
-			color: var(--accent-bg);
-			text-decoration: none;
+		> .logo {
+			height: 1.5em;
+			transform: translateY(0.15rem);
+			width: auto;
 		}
 	}
 
-	& details-utils {
-		& details {
-			background-color: transparent;
-			color: var(--link);
-			padding: 0;
+	& :is(button, .button) {
+		--_border: var(--accent-bg-subtle);
 
-			& summary {
-				all: unset;
-				/* stylelint-disable-next-line order/properties-alphabetical-order */
-				align-items: baseline;
-				background-color: transparent;
-				border-radius: var(--radius-2);
-				cursor: pointer;
-				display: flex;
-				gap: 0.5ch;
-				margin-left: calc(var(--size-1) * -1);
-				margin-right: calc(var(--size-1) * -1);
-				padding-block: 0;
-				padding-left: var(--size-1);
-				padding-right: var(--size-1);
-				transition: background-color 200ms var(--ease-2);
+		border-width: var(--border-size-1);
+		color: var(--accent-bg-active);
+		padding: var(--size-1);
 
-				&:hover {
-					background-color: var(--accent-bg);
-					text-decoration-color: transparent;
-				}
+		&:hover {
+			--_highlight-size: var(--size-1);
+		}
 
-				&:active {
-					background-color: var(--accent-bg-hover);
-				}
+		&:is(:hover, :focus, :active) {
+			--_border: var(--accent-bg);
+		}
+	}
 
-				&:focus-visible {
-					outline: 2px solid var(--link);
-					outline-offset: 0;
-				}
+	& .list {
+		display: flex;
+		flex-wrap: wrap;
+		gap: var(--size-2) var(--size-3);
+		margin-inline-end: auto;
 
-				&:not(:active):focus-visible {
-					outline-offset: var(--size-1);
-				}
+		& a {
+			border-radius: var(--radius-2);
+			display: block;
+			text-decoration: none;
 
-				@media (prefers-reduced-motion: no-preference) {
-					&:focus-visible {
-						transition: outline-offset 145ms var(--ease-2);
-					}
-
-					&:not(:active):focus-visible {
-						transition-duration: 0.25s;
-					}
-				}
-
-				& .icon {
-					color: var(--accent-solid);
-					font-size: 0.8em;
-					transition: transform 300ms var(--ease-out-4);
-					vertical-align: revert;
-				}
-
-				&::-webkit-details-marker {
-					display: none;
-				}
+			&[aria-current="page"] {
+				background: var(--accent-bg);
+				color: var(--link-visited);
 			}
 
-			/* stylelint-disable-next-line no-descending-specificity */
-			&[open] summary {
-				background-color: var(--accent-bg);
-				margin-block-end: 0;
-
-				& .icon {
-					transform: rotate(0.125turn);
-				}
-			}
-
-			& ul {
-				align-items: flex-start;
-				background-color: var(--accent-bg-subtle);
-				border-color: var(--accent-bg-hover);
-				border-radius: var(--radius-2);
-				border-width: var(--border-size-1);
-				box-shadow: var(--shadow-4);
-				display: flex;
-				flex-direction: column;
-				gap: var(--size-1);
-				padding: var(--size-2) var(--size-3);
-				position: absolute;
-				transform: translate(-4px, var(--size-1));
-				z-index: 1;
+			&:hover {
+				background-color: var(--accent-text);
+				color: var(--accent-bg);
 			}
 		}
 	}
