--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,7 +4,7 @@ layout: base-without-header.njk
 <header class="[ main-header ][ padding-block-end-6 gradient-border border-block-end-width ]">
 	<h1
 		class="
-			{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/archive/" or page.url === "/bookmarks/" or page.url === "/mastodon/" -%}
+			{%- if page.url === "/garden/" or page.url === "/essays/" or page.url === "/notes/" or page.url === "/microposts/" or page.url === "/bookmarks/" or page.url === "/projects/" -%}
 				[ p-name ]
 			{%- endif -%}
 			[ margin-0 line-height-1 ]
