--- a/src/input/content/pages/bookmarks.njk
+++ b/src/input/content/pages/bookmarks.njk
@@ -3,7 +3,8 @@ layout: base
 title: Bookmarks
 eleventyNavigation:
   key: Bookmarks
-  order: 4
+  parent: Library
+  order: 1
 eleventyImport:
   collections: ["bookmarks"]
 ---
