--- a/src/input/content/pages/guestbook.njk
+++ b/src/input/content/pages/guestbook.njk
@@ -3,7 +3,8 @@ layout: base
 title: Guestbook
 eleventyNavigation:
   key: Guestbook
-  order: 7
+  parent: Contact
+  order: 1
 ---
 
 <aside class="callout">
