--- a/src/input/content/pages/microposts.njk
+++ b/src/input/content/pages/microposts.njk
@@ -1,10 +1,10 @@
 ---
 layout: base
-title: Mastodon
+title: Microposts
 eleventyNavigation:
-  key: Mastodon
-  parent: Writing
-  order: 3
+  key: Microposts
+  parent: Garden
+  order: 10
 ---
 
 <ul class="[ feed ]">
