--- a/src/input/content/pages/projects.njk
+++ b/src/input/content/pages/projects.njk
@@ -3,9 +3,8 @@ layout: base
 title: Projects
 eleventyNavigation:
   key: Projects
+  parent: Garden
   order: 5
-navToHtmlOptions:
-  showExcerpt: true
 eleventyImport:
   collections: ["projects"]
 ---
