--- a/src/input/content/pages/search.njk
+++ b/src/input/content/pages/search.njk
@@ -1,25 +1,26 @@
 ---
 layout: base
 title: Search
-eleventyNavigation:
-  key: Search
-  order: 8
 ---
 
-<form action="https://duckduckgo.com/" method="get" class="search" id="search">
-	<div class="[ flex gap-2 align-center ]">
+<form action="https://duckduckgo.com/" method="get" id="search" role="search" class="[ search ]" autocomplete="off" novalidate>
+	<div class="[ flex flex-wrap gap-2 align-center ]">
 		<div>
-			<label for="search-term" class="[ visually-hidden ]">Search Terms</label>
-			<input type="text" enterkeyhint="search" name="q" id="search-term" class="search-txt" autocomplete="off" autofocus>
-			<input aria-hidden="true" hidden name="sites" value="www.ellyloel.com">
+			<input type="text" name="q" id="search-input" class="[ search-input ]" aria-labelledby="search-button" enterkeyhint="search" autofocus>
+			<input type="hidden" name="sites" value="www.ellyloel.com">
 		</div>
-		<div>
-			<button type="submit" class="search-btn btn-form">Search</button>
-		</div>
+		<button type="submit" id="search-button">
+			{%- icon "fas:magnifying-glass" -%}
+			<span class="[ visually-hidden ]">Search</span>
+		</button>
 	</div>
-	<p><small>Search provided by <is-land> <a href="https://duckduckgo.com/">DuckDuckGo</a><template data-island="replace"> <a href="https://pagefind.app/">Pagefind</a></template></is-land>.</small></p>
+	<p>
+		<small>
+			Search provided by <is-land><a href="https://duckduckgo.com/">DuckDuckGo</a><template data-island="replace"><a href="https://pagefind.app/">Pagefind</a></template></is-land>.
+		</small>
+	</p>
 </form>
-<div id="search-results" class="[ hide flow ]">
-	<h2 id="search-results-count" aria-live="polite">Results</h2>
-	<ol id="search-results-list" class="[ flow ]"></ol>
+<div id="search-results" class="[ search-results ][ flow ]" hidden>
+	<h2 id="search-results-count" aria-live="polite">results</h2>
+	<ol id="search-results-list" class="[ search-results-list ][ flow ]"></ol>
 </div>
