--- a/src/input/root/feeds/not-bookmarks.json.njk
+++ b/src/input/root/feeds/not-bookmarks.json.njk
@@ -27,7 +27,7 @@ permalink: "not-bookmarks.json"
 				{%- endif -%},
 			{%- if post.data.tags -%}
 			"tags": [
-				{% for tag in post.data.tags  | reject("equalto", "Blog") | reject("equalto", "Garden") | reject("equalto", "Projects") | reject("equalto", "TIL") | reject("equalto", "YouTube") -%}
+				{% for tag in post.data.tags | reject("equalto", "YouTube") | reject("equalto", "Seedling") | reject("equalto", "Budding") | reject("equalto", "Evergreen") | reject("equalto", "Essays") | reject("equalto", "Notes") | reject("equalto", "Microposts") | reject("equalto", "Projects") | reject("equalto", "Garden") -%}
 					"{{ tag }}"{% if not loop.last %}{{ ",\n" }}{% endif %}
 				{%- endfor %}
 			],
