- Add new typography utilities - Update card and button styles - Adjust spacing and layout variables - Move skip link target from <main> to <h1>

--- a/src/_includes/date.njk
+++ b/src/_includes/date.njk
@@ -1,4 +1,4 @@
-<span>
+<span style="font-size: 0.8em">
 	{{ label + " on " }}
 	<time 
 		class="[ {% if label === "Created" %}dt-published{% else %}dt-updated{% endif %} ]"
