--- a/src/input/css/blocks/settings.css
+++ b/src/input/css/blocks/settings.css
@@ -3,7 +3,6 @@
 	border-radius: var(--radius-3);
 	box-shadow: var(--shadow-6);
 	color: var(--text-1);
-	display: grid;
 	inline-size: 100%;
 	inset: 0;
 	margin: auto;
@@ -11,25 +10,38 @@
 	overflow: hidden;
 	padding: 0;
 	position: fixed;
-	transition: opacity 500ms var(--ease-3);
-	z-index: var(--layer-important);
+	transition-behavior: allow-discrete;
+	transition-duration: 500ms;
+	transition-property: opacity, display, overlay, scale;
+	transition-timing-function: var(--ease-3);
 
-	&[loading] {
-		visibility: hidden;
+	&:modal {
+		display: grid;
+		opacity: 1;
 	}
 
-	&:not([open]) {
+	&:not(:modal) {
+		display: none;
 		opacity: 0;
-		pointer-events: none;
 	}
 
 	@media (prefers-reduced-motion: no-preference) {
-		animation: var(--animation-scale-down) forwards;
-		animation-timing-function: var(--ease-squish-3);
+		&:modal {
+			scale: 100%;
+		}
 
-		&[open] {
-			animation: var(--animation-scale-up) forwards;
+		&:not(:modal) {
 			scale: 80%;
+		}
+	}
+
+	@starting-style {
+		&:modal {
+			opacity: 0;
+
+			@media (prefers-reduced-motion: no-preference) {
+				scale: 80%;
+			}
 		}
 	}
 }
@@ -57,69 +69,8 @@
 	}
 }
 
-.theme-hue-slider {
-	appearance: none;
-	background: linear-gradient(
-		to right,
-		lch(46 150 0deg),
-		lch(46 150 40deg),
-		lch(46 150 80deg),
-		lch(46 150 120deg),
-		lch(46 150 160deg),
-		lch(46 150 200deg),
-		lch(46 150 240deg),
-		lch(46 150 280deg),
-		lch(46 150 320deg),
-		lch(46 150 360deg)
-	);
-	background: linear-gradient(
-		to right in oklch longer hue,
-		lch(46 150 0deg) 0%,
-		lch(46 150 0deg) 100%
-	);
+channel-slider::part(slider) {
+	--_slider-thumb-radius: 9999px;
+
 	border-radius: 9999px;
-	display: block;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-}
-
-.theme-hue-slider::-webkit-slider-runnable-track {
-	cursor: pointer;
-	height: 1.5rem;
-	width: 100%;
-}
-
-.theme-hue-slider::-webkit-slider-thumb {
-	appearance: none;
-	background: transparent;
-	border: 4px groove var(--accent-1);
-	border-radius: 9999px;
-	cursor: grab;
-	height: 1.5rem;
-	margin-top: 0;
-	width: 1.5rem;
-
-	&:active {
-		cursor: grabbing;
-	}
-}
-
-.theme-hue-slider::-moz-range-track {
-	cursor: pointer;
-	height: 1.5rem;
-	width: 100%;
-}
-
-.theme-hue-slider::-moz-range-thumb {
-	background: transparent;
-	border: 4px groove var(--accent-1);
-	border-radius: 9999px;
-	cursor: grab;
-	height: 1.5rem;
-	width: 1.5rem;
-
-	&:active {
-		cursor: grabbing;
-	}
 }
